# dbtl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: test_proxy.rs
scripts/: update_readme_install_version.sh
src/: cli.rs  error.rs  graph.rs  main.rs  manifest.rs  render.rs  selector.rs  version.rs
src/render/: ascii.rs  layout.rs
tests/: cli.rs  dbt_jaffle.rs
tests/fixtures/: manifest.json
tests/fixtures/jaffle_shop_project/: .user.yml
tests/snapshots/: cli__render_all_models_fixture.snap
