[package]
name = "dbtl"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[dev-dependencies]
proptest = "1.7.0"
insta = { version = "1.43.1", features = ["redactions"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.19.1"
